# qualification

./: README.md  pyproject.toml
application/: admin.py  models.py  paginators.py  serializers.py  service.py  tests.py  urls.py  views.py
application/migrations/: 0001_initial.py  0002_remove_networkchain_contacts_and_more.py  0003_alter_networkchain_debt_amount.py  0004_alter_networkchain_debt_amount.py  0005_networkchain_contacts_networkchain_products.py  0006_remove_networkchain_contacts_and_more.py  0007_alter_contact_seller.py  0008_alter_contact_seller.py
config/: settings.py  urls.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_avatar.py
